@startuml

class CDescriptor {
    const SIP_UI8 * & m_pui8Data
    SIP_UI8 GetTag()
    SIP_UI8 GetLength()
    SIP_UI8 GetTotalLength()
    const SIP_UI8* GetData()
}

class CDescriptorList {
    const SIP_UI8 * & m_pui8Data
    SIP_UI16          m_ui16DescListLen
    SIP_UI32 GetTotalLength()
    void InitList()
    const SIP_UI8* GetDescriptorPtr()
}

class CData {
    const SIP_UI8 * m_pui8Data
    SIP_UI32        m_ui32DataLen
    void SetData()
    SIP_UI32 GetLen()
    const SIP_UI8* GetData()
    void HexDump()
}

class CPrivateSection {
    SIP_UI8 GetTableID()
    SIP_UI8 GetSSI()
    SIP_UI16 GetSectionLegnth()
    SIP_UI16 GetTableIdExtension()
    SIP_UI8 GetVersionNo()
    SIP_UI8 GetCNI()
    SIP_UI8 GetSectionNumber()
    SIP_UI8 GetLastSectionNumber()
    const SIP_UI8* GetDescriptorList()
    const SIP_UI8* GetPrivateData()
    SIP_UI16 GetPrivateDataLength()
    SIP_UI32 GetSectionCRC()
    SIP_UI32 GetCalculatedCRC()
    SIP_UI32 GetFullDataCRC()
    bool ValidateCRC()
    bool isSectionValid()
    void PrintSectionInfo()
}

class CPatSection {
    bool isValidPAT()
    SIP_UI16 GetTransportStreamID()
    SIP_UI8 GetNoOfProgramsInList()
    void InitProgList()
    void GetProgramInfo()
    bool MoveToNextProgramInfo()
    void PrintPAT()
}

class CPmtSection {
    bool isValidPMT()
    SIP_UI16 GetProgramNumber()
    SIP_UI16 GetPcrPid()
    SIP_UI16 GetProgramInfoLength()
    const SIP_UI8* GetProgramInfoDescBuf()
    SIP_UI16 GetStreamInfoLength()
    const SIP_UI8* GetStreamInfoBuffer()
    void InitStreamInfoList()
    SIP_UI8 GetStreamType()
    SIP_UI16 GetStreamPid()
    SIP_UI16 GetESInfoLength()
    const SIP_UI8* GetESInfoDescBuff()
    bool MoveToNextStreamInfoInList()
    void PrintPMT()
}

class CCatSection {
    bool isValidCAT()
    const SIP_UI8* GetDescriptorListBuffer()
    SIP_UI16 GetDescriptorListBufferLength()
    void PrintCAT()
}

class CEcmSection {
    bool isValidECM()
    const SIP_UI8* GetEcmDataBuffer()
    SIP_UI16 GetEcmDataBufferLength()
    void PrintECM()
}

class CNitSection {
    bool isValidNIT()
    void printNIT()
}

class CEmmSection {
    bool isValidEMM()
    void PrintEMM()
}

CData <|-- CPrivateSection


CPrivateSection <|-- CPatSection

CPrivateSection <|-- CPmtSection

CPrivateSection <|-- CCatSection

CPrivateSection <|-- CNitSection

CPrivateSection <|-- CEcmSection

CPrivateSection <|-- CEmmSection

@enduml